--- a/music_classification_notebook_complete.ipynb
+++ b/music_classification_notebook_complete.ipynb
@@ -69,6 +69,7 @@
     "colab": {
       "name": "notebook.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -324,6 +325,7 @@
         "id": "bearing-produce"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "def get_playlist(playlist_id,genre):\n",
         "    # connect to the playlist \n",
         "    playlist = sp.user_playlist(username, playlist_id=playlist_id)\n",
@@ -645,7 +647,7 @@
         "id": "choice-updating"
       },
       "source": [
-        "\n",
+        "###--------LIVE CODING-----------------###\n",
         "# combine all the data as a complete dataframe\n",
         "df = pd.concat([df_classical,df_jazz,df_rap]).reset_index()\n"
       ],
@@ -669,6 +671,7 @@
         "id": "understood-tumor"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "cols = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness','acousticness', \\\n",
         "        'instrumentalness', 'liveness', 'valence', 'tempo']"
       ],
@@ -1036,6 +1039,7 @@
         "id": "optional-wagner"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "def standardize(X):\n",
         "    X_std = (X - X.min(axis=0)) / (X.max(axis=0)-X.min(axis=0))\n",
         "    return X_std"
@@ -1414,6 +1418,8 @@
         "outputId": "564f317b-9a94-44a4-bcf5-df7c6aec3c04"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
+        "### create one plot as an example ###\n",
         "fig,axes = plt.subplots(4,3,figsize=(20,25))\n",
         "axes = axes.ravel()\n",
         "\n",
@@ -1476,6 +1482,7 @@
         "outputId": "9f943688-4d84-499f-df22-ee268c854146"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "plt.figure(figsize=(7,5))\n",
         "joint_plot = sns.regplot(\n",
         "    data=df,\n",
@@ -1569,6 +1576,7 @@
         "id": "express-reverse"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "cols_plot = ['danceability', 'energy', 'loudness', 'speechiness','instrumentalness']"
       ],
       "id": "express-reverse",
@@ -1586,6 +1594,7 @@
         "outputId": "0cdfd66e-52e8-427d-cc85-d5ab6bc19278"
       },
       "source": [
+        "\n",
         "plt.figure(figsize=(30,30))\n",
         "sns.pairplot(df[cols_plot+['genre']],hue='genre',diag_kind=\"hist\")\n",
         "# plt.savefig('music_pairplot.pdf')"
@@ -1656,7 +1665,9 @@
         "outputId": "41607b5a-4969-44d2-e7ee-4757ea20644e"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "plt.figure(figsize=(10,7))\n",
+        "\n",
         "sns.heatmap(df[cols].corr(),annot=True,)"
       ],
       "id": "driving-volume",
@@ -1924,6 +1935,7 @@
         "id": "domestic-andrews"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "dict_genre = {'classical':1,'jazz':2,'rap':3}"
       ],
       "id": "domestic-andrews",
@@ -1974,6 +1986,7 @@
         "id": "favorite-causing"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "def get_train_test(df,test_percent=0.2):\n",
         "    ind = df.index\n",
         "    df_shuffle = df.sample(frac = 1)\n",
@@ -2033,6 +2046,7 @@
         "id": "resistant-explosion"
       },
       "source": [
+        "###--------LIVE CODING-----------------### ? - maybe? \n",
         "## I adopted the scripts from https://gist.github.com/onelharrison/373d81dc21d43c3126f15d2d0867d80a#file-knn_from_scratch-py \n",
         "def knn(X_train,y_train, x_test, k):\n",
         "    neighbor_distances_and_indices = []\n",
@@ -2246,6 +2260,7 @@
         "id": "expressed-tunnel"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "def cal_accuracy(y_pred,y_test):\n",
         "    return sum(y_pred == y_test)/len(y_test)"
       ],
@@ -2300,6 +2315,7 @@
         "id": "terminal-aerospace"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "## attached predicted genres to the df_test dataframe\n",
         "df_test['genre_pred'] = y_pred"
       ],
@@ -2382,6 +2398,7 @@
         "id": "accredited-gentleman"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "scaler = MinMaxScaler()\n",
         "df[cols] = scaler.fit_transform(df[cols])"
       ],
@@ -2405,13 +2422,14 @@
         "id": "express-wilderness"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "## split training and testing datasets \n",
         "X = df[cols_plot]\n",
         "y = df['genre']\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ],
       "id": "express-wilderness",
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -2430,6 +2448,7 @@
         "id": "biological-oliver"
       },
       "source": [
+        "###--------LIVE CODING-----------------###\n",
         "## build a knn model \n",
         "\n",
         "neigh = KNeighborsClassifier(n_neighbors=8)\n",
